--- a/waste-audit-feb2022.Rmd
+++ b/waste-audit-feb2022.Rmd
@@ -576,7 +576,9 @@ con <- data.frame(year = c("2021", "2022"),
   contamination_rate = c(74, 61))
 
 ggplot(con) +
-    geom_bar( aes(x=year, y=contamination_rate), stat="identity", fill="#2ca816", width = 0.5) +
+    geom_bar(aes(x=year, y=contamination_rate), stat="identity", fill="#2ca816", width = 0.5) +
+  xlab("Year") +
+  ylab("Contamination Rates") +
     ggtitle("Yearly Contamination Rate Comparison") +
     ylim(0, 100) +
   theme_minimal()
